// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots common/components ActionButton 1`] = `
<div
  className="jsx-3826807623 actionButtonWrapper"
>
  <div
    className="jsx-3826807623 actionButton"
  >
    <button
      className="ui large circular icon primary button"
      disabled={undefined}
      onClick={[Function]}
      role="button"
      tabIndex={undefined}
    >
      <i
        aria-hidden="true"
        className="plus icon"
      />
    </button>
  </div>
  <div
    className="jsx-3826807623 ui vertical text menu buttonMenu"
  >
    <button
      className="jsx-3826807623 item"
      onClick={[Function]}
    >
      abcd
    </button>
    <button
      className="jsx-3826807623 item"
      onClick={[Function]}
    >
      cdef
    </button>
  </div>
</div>
`;

exports[`Storyshots common/components Collapser (extended) 1`] = `
<div
  className="jsx-51013090 collapser"
>
  <div
    className="jsx-51013090 content"
  >
    <div>
      <p>
        hello this is a very short question that is getting longer and longer as we speak. it is in fact very very long. the end is even hidden at the beginning.
      </p>
      <p>
        wow, is this a long question. i could never have imagined seeing such a question.
      </p>
    </div>
    <div>
      <p>
        hello this is a very short question that is getting longer and longer as we speak. it is in fact very very long. the end is even hidden at the beginning.
      </p>
      <p>
        wow, is this a long question. i could never have imagined seeing such a question.
      </p>
    </div>
  </div>
  <div
    className="jsx-51013090 collapse"
  >
    <i
      aria-hidden="true"
      className="angle double up icon"
      onClick={[Function]}
    />
  </div>
</div>
`;

exports[`Storyshots common/components Collapser 1`] = `
<div
  className="jsx-51013090 collapser"
>
  <div
    className="jsx-51013090 content collapsed"
  >
    <div>
      <p>
        hello this is a very short question that is getting longer and longer as we speak. it is in fact very very long. the end is even hidden at the beginning.
      </p>
      <p>
        wow, is this a long question. i could never have imagined seeing such a question.
      </p>
    </div>
    <div>
      <p>
        hello this is a very short question that is getting longer and longer as we speak. it is in fact very very long. the end is even hidden at the beginning.
      </p>
      <p>
        wow, is this a long question. i could never have imagined seeing such a question.
      </p>
    </div>
  </div>
  <div
    className="jsx-51013090 collapse"
  >
    <i
      aria-hidden="true"
      className="angle double down icon"
      onClick={[Function]}
    />
  </div>
</div>
`;

exports[`Storyshots common/components ListWithHeader 1`] = `
<div
  className="jsx-319169000"
>
  <h3
    className="jsx-319169000 listHeader"
  >
    hello world
  </h3>
  <ul
    className="jsx-319169000 list"
  >
    <li
      className="jsx-319169000 listItem"
    >
      abcd
    </li>
    <li
      className="jsx-319169000 listItem"
    >
      cdef
    </li>
  </ul>
</div>
`;

exports[`Storyshots common/navbar AccountArea 1`] = `
<div
  aria-busy={undefined}
  aria-disabled={undefined}
  aria-expanded={false}
  aria-multiselectable={undefined}
  className="ui item simple dropdown"
  onBlur={[Function]}
  onChange={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  role="listbox"
  tabIndex={0}
>
  <div
    aria-live="polite"
    className="text"
    role="alert"
  >
    AW
  </div>
  <i
    aria-hidden="true"
    className="dropdown icon"
    onClick={[Function]}
  />
  <div
    className="menu transition"
  >
    <div
      aria-checked={undefined}
      aria-disabled={undefined}
      aria-selected={undefined}
      className="item"
      onClick={[Function]}
      role="option"
    >
      <span>
        Settings
      </span>
    </div>
    <div
      aria-checked={undefined}
      aria-disabled={undefined}
      aria-selected={undefined}
      className="item"
      onClick={[Function]}
      role="option"
    >
      <span>
        Logout
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots common/navbar Navbar 1`] = `
<div
  className="jsx-33321685 navbar"
>
  <div
    className="jsx-33321685 sideArea"
  >
    <div
      className="ui borderless noBorder menu"
    >
      <div
        className="icon item"
        onClick={[Function]}
      >
        <i
          aria-hidden="true"
          className="sidebar icon"
        />
      </div>
      <h1
        className="jsx-33321685"
      >
        Example page
      </h1>
    </div>
  </div>
  <div
    className="jsx-33321685 searchArea"
  >
    <div
      className="ui fluid icon input"
    >
      <input
        disabled={undefined}
        onChange={[Function]}
        placeholder="Search..."
        tabIndex={undefined}
        type="text"
      />
      <i
        aria-hidden="true"
        className="search icon"
      />
    </div>
  </div>
  <div
    className="jsx-33321685 accountArea"
  >
    <div
      className="ui borderless noBorder menu"
    >
      <div
        className="right menu"
      >
        <a
          className="item"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          /sessions/
          a2sd5
           
          <i
            aria-hidden="true"
            className="qrcode icon"
          />
        </a>
        <div
          aria-busy={undefined}
          aria-disabled={undefined}
          aria-expanded={false}
          aria-multiselectable={undefined}
          className="ui item simple dropdown"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
          role="listbox"
          tabIndex={0}
        >
          <div
            aria-live="polite"
            className="text"
            role="alert"
          >
            AW
          </div>
          <i
            aria-hidden="true"
            className="dropdown icon"
            onClick={[Function]}
          />
          <div
            className="menu transition"
          >
            <div
              aria-checked={undefined}
              aria-disabled={undefined}
              aria-selected={undefined}
              className="item"
              onClick={[Function]}
              role="option"
            >
              <span>
                Settings
              </span>
            </div>
            <div
              aria-checked={undefined}
              aria-disabled={undefined}
              aria-selected={undefined}
              className="item"
              onClick={[Function]}
              role="option"
            >
              <span>
                Logout
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots common/navbar SearchArea 1`] = `
<div
  className="ui fluid icon input"
>
  <input
    disabled={undefined}
    onChange={[Function]}
    placeholder="Search..."
    tabIndex={undefined}
    type="text"
  />
  <i
    aria-hidden="true"
    className="search icon"
  />
</div>
`;

exports[`Storyshots common/navbar SessionArea 1`] = `
<a
  className="item"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  /sessions/
  a7s7d
   
  <i
    aria-hidden="true"
    className="qrcode icon"
  />
</a>
`;

exports[`Storyshots common/sidebar Sidebar (invisible) 1`] = `
<div
  className="jsx-4218096801 sidebar"
>
  <div
    className="pushable"
  >
    <div
      className="ui vertical labeled icon ui overlay left wide sidebar sidebarMenu menu"
    >
      <a
        className="active item"
        onClick={[Function]}
      >
        Item 1
      </a>
      <a
        className="item"
        onClick={[Function]}
      >
        Item 2
      </a>
    </div>
    <div
      className="pusher"
    >
      PAGE CONTENT
    </div>
  </div>
</div>
`;

exports[`Storyshots common/sidebar Sidebar (visible) 1`] = `
<div
  className="jsx-4218096801 sidebar"
>
  <div
    className="pushable"
  >
    <div
      className="ui vertical labeled icon ui overlay left wide visible sidebar sidebarMenu menu"
    >
      <a
        className="active item"
        onClick={[Function]}
      >
        Item 1
      </a>
      <a
        className="item"
        onClick={[Function]}
      >
        Item 2
      </a>
    </div>
    <div
      className="pusher"
    >
      PAGE CONTENT
    </div>
  </div>
</div>
`;

exports[`Storyshots common/sidebar SidebarItem 1`] = `
<a
  className="item"
  onClick={[Function]}
>
  ITEM CONTENT
</a>
`;

exports[`Storyshots confusion ConfusionBarometer 1`] = `
<div
  className="jsx-891792633 confusionBarometer"
>
  <h2
    className="jsx-891792633"
  >
    <span>
      Confusion-Barometer
    </span>
  </h2>
  <div
    className="ui toggle checkbox"
    onChange={[Function]}
    onClick={[Function]}
    onMouseDown={[Function]}
  >
    <input
      checked={false}
      className="hidden"
      name={undefined}
      readOnly={true}
      tabIndex={0}
      type="checkbox"
      value={false}
    />
    <label>
      Activated
    </label>
  </div>
</div>
`;

exports[`Storyshots confusion ConfusionSlider 1`] = `
<div
  className="jsx-1849731830 confusionSlider"
>
  <div
    className="jsx-1849731830 title"
  >
    <h2>
      Speed
    </h2>
  </div>
  <div
    className="jsx-1849731830 slider"
  >
    <div
      aria-orientation="horizontal"
      aria-valuemax={50}
      aria-valuemin={-50}
      aria-valuenow={10}
      className="rangeslider rangeslider-horizontal"
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="rangeslider__fill"
        style={
          Object {
            "width": "0px",
          }
        }
      />
      <div
        className="rangeslider__handle"
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        style={
          Object {
            "left": "0px",
          }
        }
        tabIndex={0}
      >
        <div
          className="rangeslider__handle-label"
        >
          
        </div>
      </div>
      <ul
        className="rangeslider__labels"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots evaluations Graph 1`] = `
<div
  className="jsx-464345458 graph"
>
  <button
    className="ui button showGraphButton"
    disabled={undefined}
    onClick={[Function]}
    role="button"
    tabIndex={undefined}
  >
    <span>
      Show Graph
    </span>
  </button>
  <div
    className="jsx-464345458"
  >
    This type of graph is not implemented yet!
  </div>
</div>
`;

exports[`Storyshots evaluations Possibilities 1`] = `
<div
  className="jsx-37351210 visualization"
>
  <h2
    className="jsx-37351210"
  >
    <span>
      Possibilities
    </span>
  </h2>
</div>
`;

exports[`Storyshots evaluations Visualization 1`] = `
<div
  className="jsx-704040651 visualization"
>
  <h2
    className="jsx-704040651"
  >
    <span>
      Visualization
    </span>
  </h2>
  <div
    aria-busy={undefined}
    aria-disabled={undefined}
    aria-expanded={false}
    className="ui search selection dropdown"
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    role="combobox"
    tabIndex={undefined}
  >
    <input
      aria-autocomplete="list"
      autoComplete="off"
      className="search"
      onChange={[Function]}
      style={
        Object {
          "width": undefined,
        }
      }
      tabIndex={0}
      type="text"
      value=""
    />
    <div
      aria-live="polite"
      className="default text"
      role="alert"
    >
      Visualization
    </div>
    <i
      aria-hidden="true"
      className="dropdown icon"
      onClick={[Function]}
    />
    <div
      aria-multiselectable={undefined}
      className="menu transition"
      role="listbox"
    >
      <div
        aria-checked={false}
        aria-disabled={undefined}
        aria-selected={true}
        className="selected item"
        onClick={[Function]}
        role="option"
        style={
          Object {
            "pointerEvents": "all",
          }
        }
        withinType={
          Array [
            "SC",
            "MC",
          ]
        }
      >
        <span
          className="text"
        >
          Pie Chart
        </span>
      </div>
      <div
        aria-checked={false}
        aria-disabled={undefined}
        aria-selected={false}
        className="item"
        onClick={[Function]}
        role="option"
        style={
          Object {
            "pointerEvents": "all",
          }
        }
        withinType={
          Array [
            "SC",
            "MC",
          ]
        }
      >
        <span
          className="text"
        >
          Bar Chart
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots feedbacks Feedback 1`] = `
<div
  className="jsx-22459915 feedback"
>
  <div
    className="jsx-22459915 content"
  >
    hello world
  </div>
  <div
    className="jsx-22459915 delete"
  >
    <button
      className="ui basic fluid icon button"
      disabled={undefined}
      onClick={[Function]}
      role="button"
      tabIndex={undefined}
    >
      <i
        aria-hidden="true"
        className="trash outline icon"
      />
    </button>
  </div>
  <div
    className="jsx-22459915 votes"
  >
    +
    100
  </div>
</div>
`;

exports[`Storyshots feedbacks FeedbackChannel (isActive) 1`] = `
<div
  className="jsx-901584548 feedbackChannel"
>
  <h2
    className="jsx-901584548"
  >
    <span>
      Feedback-Channel
    </span>
  </h2>
  <div
    className="jsx-901584548 toggle"
  >
    <div
      className="ui checked toggle checkbox"
      onChange={[Function]}
      onClick={[Function]}
      onMouseDown={[Function]}
    >
      <input
        checked={true}
        className="hidden"
        name={undefined}
        readOnly={true}
        tabIndex={0}
        type="checkbox"
        value={true}
      />
      <label>
        Activated
      </label>
    </div>
  </div>
  <div
    className="jsx-901584548 toggle publicationToggle"
  >
    <div
      className="ui toggle checkbox publishCheckbox"
      onChange={[Function]}
      onClick={[Function]}
      onMouseDown={[Function]}
    >
      <input
        checked={false}
        className="hidden"
        name={undefined}
        readOnly={true}
        tabIndex={0}
        type="checkbox"
        value={false}
      />
      <label>
        Publish questions
      </label>
    </div>
  </div>
  <div
    className="jsx-901584548 feedbacks"
  />
</div>
`;

exports[`Storyshots feedbacks FeedbackChannel (isPublic) 1`] = `
<div
  className="jsx-901584548 feedbackChannel"
>
  <h2
    className="jsx-901584548"
  >
    <span>
      Feedback-Channel
    </span>
  </h2>
  <div
    className="jsx-901584548 toggle"
  >
    <div
      className="ui checked toggle checkbox"
      onChange={[Function]}
      onClick={[Function]}
      onMouseDown={[Function]}
    >
      <input
        checked={true}
        className="hidden"
        name={undefined}
        readOnly={true}
        tabIndex={0}
        type="checkbox"
        value={true}
      />
      <label>
        Activated
      </label>
    </div>
  </div>
  <div
    className="jsx-901584548 toggle publicationToggle"
  >
    <div
      className="ui checked toggle checkbox publishCheckbox"
      onChange={[Function]}
      onClick={[Function]}
      onMouseDown={[Function]}
    >
      <input
        checked={true}
        className="hidden"
        name={undefined}
        readOnly={true}
        tabIndex={0}
        type="checkbox"
        value={true}
      />
      <label>
        Publish questions
      </label>
    </div>
  </div>
  <div
    className="jsx-901584548 feedbacks"
  />
</div>
`;

exports[`Storyshots feedbacks FeedbackChannel 1`] = `
<div
  className="jsx-901584548 feedbackChannel"
>
  <h2
    className="jsx-901584548"
  >
    <span>
      Feedback-Channel
    </span>
  </h2>
  <div
    className="jsx-901584548 toggle"
  >
    <div
      className="ui toggle checkbox"
      onChange={[Function]}
      onClick={[Function]}
      onMouseDown={[Function]}
    >
      <input
        checked={false}
        className="hidden"
        name={undefined}
        readOnly={true}
        tabIndex={0}
        type="checkbox"
        value={false}
      />
      <label>
        Activated
      </label>
    </div>
  </div>
  <div
    className="jsx-901584548 toggle publicationToggle"
  >
    <div
      className="ui disabled toggle checkbox publishCheckbox"
      onChange={[Function]}
      onClick={[Function]}
      onMouseDown={[Function]}
    >
      <input
        checked={false}
        className="hidden"
        name={undefined}
        readOnly={true}
        tabIndex={-1}
        type="checkbox"
        value={false}
      />
      <label>
        Publish questions
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots forms/components LoginForm 1`] = `
<form
  className="jsx-2997166766 ui form error"
>
  <div
    className="required field"
  >
    <label
      className="jsx-1447640616"
      forHtml="email"
    >
      Email
    </label>
    <input
      className="jsx-1447640616 "
      name="email"
      onBlur={[Function]}
      onChange={[Function]}
      onDragStart={[Function]}
      onDrop={[Function]}
      onFocus={[Function]}
      placeholder="Email"
      type="email"
      value=""
    />
  </div>
  <div
    className="required field"
  >
    <label
      className="jsx-1447640616"
      forHtml="password"
    >
      Password
    </label>
    <input
      className="jsx-1447640616 "
      name="password"
      onBlur={[Function]}
      onChange={[Function]}
      onDragStart={[Function]}
      onDrop={[Function]}
      onFocus={[Function]}
      placeholder="Password"
      type="password"
      value=""
    />
  </div>
  <div
    className="jsx-2997166766 actionArea"
  >
    <button
      className="ui primary disabled button semanticButton"
      disabled={true}
      onClick={[Function]}
      role="button"
      tabIndex={-1}
      type="submit"
    >
      Submit
    </button>
    <div
      className="jsx-2997166766 links"
    >
      <div
        className="ui list"
        role="list"
      >
        <div
          className="item"
          data-value={undefined}
          onClick={[Function]}
          role="listitem"
        >
          <a
            className="jsx-2997166766"
            href="/user/resetPassword"
            onClick={[Function]}
          >
            Forgot password?
          </a>
        </div>
        <div
          className="item"
          data-value={undefined}
          onClick={[Function]}
          role="listitem"
        >
          <a
            className="jsx-2997166766"
            href="/user/aaiLogin"
            onClick={[Function]}
          >
            Login with AAI
          </a>
        </div>
      </div>
    </div>
  </div>
</form>
`;

exports[`Storyshots forms/components PasswortResetForm 1`] = `
<form
  className="jsx-2997166766 ui form error"
>
  <div
    className="required field"
  >
    <label
      className="jsx-1447640616"
      forHtml="email"
    >
      Email
    </label>
    <input
      className="jsx-1447640616 "
      name="email"
      onBlur={[Function]}
      onChange={[Function]}
      onDragStart={[Function]}
      onDrop={[Function]}
      onFocus={[Function]}
      placeholder="Email"
      type="email"
      value=""
    />
  </div>
  <div
    className="jsx-2997166766 actionArea"
  >
    <button
      className="ui primary disabled button semanticButton"
      disabled={true}
      onClick={[Function]}
      role="button"
      tabIndex={-1}
      type="submit"
    >
      Submit
    </button>
    <div
      className="jsx-2997166766 links"
    >
      <div
        className="ui list"
        role="list"
      >
        <div
          className="item"
          data-value={undefined}
          onClick={[Function]}
          role="listitem"
        >
          <a
            className="jsx-2997166766"
            href="/user/login"
            onClick={[Function]}
          >
            Back to login
          </a>
        </div>
      </div>
    </div>
  </div>
</form>
`;

exports[`Storyshots forms/components RegistrationForm 1`] = `
<form
  className="jsx-3805768436 ui form error"
  onSubmit={[Function]}
>
  <div
    className="jsx-3805768436 personal"
  >
    <div
      className="field"
    >
      <label
        className="jsx-1447640616"
        forHtml="firstName"
      >
        First name
      </label>
      <input
        className="jsx-1447640616 "
        name="firstName"
        onBlur={[Function]}
        onChange={[Function]}
        onDragStart={[Function]}
        onDrop={[Function]}
        onFocus={[Function]}
        placeholder="First name"
        type="text"
        value=""
      />
    </div>
    <div
      className="field"
    >
      <label
        className="jsx-1447640616"
        forHtml="lastName"
      >
        Last name
      </label>
      <input
        className="jsx-1447640616 "
        name="lastName"
        onBlur={[Function]}
        onChange={[Function]}
        onDragStart={[Function]}
        onDrop={[Function]}
        onFocus={[Function]}
        placeholder="Last name"
        type="text"
        value=""
      />
    </div>
    <div
      className="required field"
    >
      <label
        className="jsx-1447640616"
        forHtml="email"
      >
        Email
      </label>
      <input
        className="jsx-1447640616 "
        name="email"
        onBlur={[Function]}
        onChange={[Function]}
        onDragStart={[Function]}
        onDrop={[Function]}
        onFocus={[Function]}
        placeholder="Email"
        type="email"
        value=""
      />
    </div>
  </div>
  <div
    className="jsx-3805768436 account"
  >
    <div
      className="required field"
    >
      <label
        className="jsx-1447640616"
        forHtml="shortname"
      >
        Shortname
      </label>
      <input
        className="jsx-1447640616 "
        name="shortname"
        onBlur={[Function]}
        onChange={[Function]}
        onDragStart={[Function]}
        onDrop={[Function]}
        onFocus={[Function]}
        placeholder="Shortname"
        type="text"
        value=""
      />
    </div>
    <div
      className="required field"
    >
      <label
        className="jsx-1447640616"
        forHtml="password"
      >
        Password
      </label>
      <input
        className="jsx-1447640616 "
        name="password"
        onBlur={[Function]}
        onChange={[Function]}
        onDragStart={[Function]}
        onDrop={[Function]}
        onFocus={[Function]}
        placeholder="Password"
        type="password"
        value=""
      />
    </div>
    <div
      className="required field"
    >
      <label
        className="jsx-1447640616"
        forHtml="passwordRepeat"
      >
        Repeat password
      </label>
      <input
        className="jsx-1447640616 "
        name="passwordRepeat"
        onBlur={[Function]}
        onChange={[Function]}
        onDragStart={[Function]}
        onDrop={[Function]}
        onFocus={[Function]}
        placeholder="Repeat password"
        type="password"
        value=""
      />
    </div>
    <div
      className="jsx-3805768436 field"
    >
      <label
        className="jsx-3805768436"
        htmlFor="useCase"
      >
        <span>
          Use case description
        </span>
      </label>
      <textarea
        name="useCase"
        onBlur={[Function]}
        onChange={[Function]}
        onDragStart={[Function]}
        onDrop={[Function]}
        onFocus={[Function]}
        type="text"
        value=""
      />
    </div>
    <button
      className="ui primary disabled right floated button"
      disabled={true}
      onClick={[Function]}
      role="button"
      tabIndex={-1}
      type="submit"
    >
      <span>
        Submit
      </span>
    </button>
  </div>
</form>
`;

exports[`Storyshots forms/components SessionCreationForm 1`] = `
<form
  className="jsx-833882662 ui form sessionCreation"
  onSubmit={null}
>
  <div
    className="jsx-833882662 sessionName"
  >
    <div
      className="field"
    >
      <label
        className="jsx-1447640616"
        forHtml="sessionName"
      >
        Name
      </label>
      <input
        className="jsx-1447640616 "
        name="sessionName"
        onBlur={[Function]}
        onChange={[Function]}
        onDragStart={[Function]}
        onDrop={[Function]}
        onFocus={[Function]}
        placeholder="Name"
        value=""
      />
    </div>
  </div>
  <div
    className="jsx-833882662 sessionTimeline"
  >
    <div
      className="jsx-3047766213 sessionTimeline"
    >
      <div
        className="jsx-3047766213 timelineItem"
      >
        <div
          className="jsx-663420075 dropzone"
        >
          <svg
            fill="currentColor"
            height="1em"
            preserveAspectRatio="xMidYMid meet"
            style={
              Object {
                "color": undefined,
                "verticalAlign": "middle",
              }
            }
            viewBox="0 0 40 40"
            width="1em"
          >
            <g>
              <path
                d="m35.9 16.4v4.3q0 0.9-0.6 1.5t-1.5 0.7h-9.3v9.2q0 0.9-0.6 1.6t-1.5 0.6h-4.3q-0.9 0-1.5-0.6t-0.7-1.6v-9.2h-9.3q-0.9 0-1.5-0.7t-0.6-1.5v-4.3q0-0.9 0.6-1.5t1.5-0.6h9.3v-9.3q0-0.9 0.7-1.5t1.5-0.6h4.3q0.9 0 1.5 0.6t0.6 1.5v9.3h9.3q0.9 0 1.5 0.6t0.6 1.5z"
              />
            </g>
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    className="jsx-833882662 actionArea"
  >
    <button
      className="jsx-833882662 ui fluid button"
      onClick={undefined}
      type="button"
    >
      <svg
        fill="currentColor"
        height="1em"
        preserveAspectRatio="xMidYMid meet"
        style={
          Object {
            "color": undefined,
            "verticalAlign": "middle",
          }
        }
        viewBox="0 0 40 40"
        width="1em"
      >
        <g>
          <path
            d="m15.9 30.7v-15.7q0-0.3-0.2-0.5t-0.5-0.2h-1.4q-0.3 0-0.5 0.2t-0.2 0.5v15.7q0 0.3 0.2 0.5t0.5 0.2h1.4q0.3 0 0.5-0.2t0.2-0.5z m5.7 0v-15.7q0-0.3-0.2-0.5t-0.5-0.2h-1.4q-0.3 0-0.5 0.2t-0.2 0.5v15.7q0 0.3 0.2 0.5t0.5 0.2h1.4q0.3 0 0.5-0.2t0.2-0.5z m5.8 0v-15.7q0-0.3-0.2-0.5t-0.6-0.2h-1.4q-0.3 0-0.5 0.2t-0.2 0.5v15.7q0 0.3 0.2 0.5t0.5 0.2h1.4q0.4 0 0.6-0.2t0.2-0.5z m-12.2-22.1h10l-1.1-2.6q-0.1-0.2-0.3-0.3h-7.1q-0.2 0.1-0.4 0.3z m20.7 0.7v1.4q0 0.3-0.2 0.5t-0.5 0.2h-2.1v21.2q0 1.8-1.1 3.2t-2.5 1.3h-18.6q-1.4 0-2.5-1.3t-1-3.1v-21.3h-2.2q-0.3 0-0.5-0.2t-0.2-0.5v-1.4q0-0.3 0.2-0.5t0.5-0.2h6.9l1.6-3.8q0.3-0.8 1.2-1.4t1.7-0.5h7.2q0.9 0 1.8 0.5t1.2 1.4l1.5 3.8h6.9q0.3 0 0.5 0.2t0.2 0.5z"
          />
        </g>
      </svg>
      <span>
        Discard
      </span>
    </button>
    <button
      className="jsx-833882662 ui fluid button"
      disabled={true}
      type="submit"
    >
      <svg
        fill="currentColor"
        height="1em"
        preserveAspectRatio="xMidYMid meet"
        style={
          Object {
            "color": undefined,
            "verticalAlign": "middle",
          }
        }
        viewBox="0 0 40 40"
        width="1em"
      >
        <g>
          <path
            d="m11.6 34.3h17.1v-8.6h-17.1v8.6z m20 0h2.8v-20q0-0.3-0.2-0.9t-0.4-0.7l-6.3-6.3q-0.2-0.2-0.8-0.5t-0.8-0.2v9.3q0 0.9-0.7 1.5t-1.5 0.6h-12.8q-0.9 0-1.6-0.6t-0.6-1.5v-9.3h-2.8v28.6h2.8v-9.3q0-0.9 0.6-1.5t1.6-0.6h18.5q0.9 0 1.5 0.6t0.7 1.5v9.3z m-8.6-20.7v-7.2q0-0.3-0.2-0.5t-0.5-0.2h-4.3q-0.3 0-0.5 0.2t-0.2 0.5v7.2q0 0.3 0.2 0.5t0.5 0.2h4.3q0.3 0 0.5-0.2t0.2-0.5z m14.3 0.7v20.7q0 0.9-0.6 1.5t-1.6 0.6h-30q-0.8 0-1.5-0.6t-0.6-1.5v-30q0-0.9 0.6-1.5t1.5-0.6h20.8q0.9 0 1.9 0.4t1.7 1.1l6.3 6.2q0.6 0.6 1 1.7t0.5 2z"
          />
        </g>
      </svg>
      <span>
        Save
      </span>
    </button>
    <button
      className="jsx-833882662 ui fluid primary button"
      disabled={true}
      onClick={null}
      type="button"
    >
      <svg
        fill="currentColor"
        height="1em"
        preserveAspectRatio="xMidYMid meet"
        style={
          Object {
            "color": undefined,
            "verticalAlign": "middle",
          }
        }
        viewBox="0 0 40 40"
        width="1em"
      >
        <g>
          <path
            d="m35.4 20.7l-29.6 16.5q-0.6 0.3-0.9 0t-0.4-0.8v-32.8q0-0.6 0.4-0.8t0.9 0l29.6 16.5q0.5 0.3 0.5 0.7t-0.5 0.7z"
          />
        </g>
      </svg>
      <span>
        Start
      </span>
    </button>
  </div>
</form>
`;

exports[`Storyshots forms/helpers FormWithLinks 1`] = `
<form
  className="jsx-2997166766 ui form error"
>
  form fields
  <div
    className="jsx-2997166766 actionArea"
  >
    <button
      className="ui primary button semanticButton"
      disabled={undefined}
      onClick={[Function]}
      role="button"
      tabIndex={undefined}
      type="submit"
    >
      button
    </button>
    <div
      className="jsx-2997166766 links"
    >
      <div
        className="ui list"
        role="list"
      >
        <div
          className="item"
          data-value={undefined}
          onClick={[Function]}
          role="listitem"
        >
          <a
            className="jsx-2997166766"
            href="href1"
            onClick={[Function]}
          >
            link1
          </a>
        </div>
        <div
          className="item"
          data-value={undefined}
          onClick={[Function]}
          role="listitem"
        >
          <a
            className="jsx-2997166766"
            href="href2"
            onClick={[Function]}
          >
            link2
          </a>
        </div>
        <div
          className="item"
          data-value={undefined}
          onClick={[Function]}
          role="listitem"
        >
          <a
            className="jsx-2997166766"
            href="href3"
            onClick={[Function]}
          >
            link3
          </a>
        </div>
      </div>
    </div>
  </div>
</form>
`;

exports[`Storyshots forms/helpers SemanticInput (with error) 1`] = `
<div
  className="error field"
>
  <label
    className="jsx-1447640616"
    forHtml={undefined}
  >
    label
  </label>
  <input
    className="jsx-1447640616 "
    placeholder="label"
  />
  <div
    className="jsx-1447640616 errorMessage"
  >
    <i
      aria-hidden="true"
      className="hand pointer icon"
    />
    <span>
      fail
    </span>
  </div>
</div>
`;

exports[`Storyshots forms/helpers SemanticInput 1`] = `
<div
  className="field"
>
  <label
    className="jsx-1447640616"
    forHtml={undefined}
  >
    label
  </label>
  <input
    className="jsx-1447640616 "
    placeholder="label"
  />
</div>
`;

exports[`Storyshots layouts EvaluationLayout 1`] = `
<div
  className="jsx-1638827600 evaluationLayout"
>
  <div
    className="jsx-1638827600 box title"
  >
    <h1
      className="jsx-1638827600"
    >
      some title
    </h1>
  </div>
  <div
    className="jsx-1638827600 box questionText"
  >
    asdasd asd asd  asdasdasdasd
  </div>
  <hr
    className="jsx-1638827600"
  />
  <div
    className="jsx-1638827600 box graph"
  />
  <div
    className="jsx-1638827600 box sampleSolution"
  >
    <h2
      className="jsx-1638827600"
    >
      <span>
        Sample Solution
      </span>
    </h2>
    <div
      className="ui toggle checkbox"
      onChange={[Function]}
      onClick={[Function]}
      onMouseDown={[Function]}
    >
      <input
        checked={false}
        className="hidden"
        name={undefined}
        readOnly={true}
        tabIndex={0}
        type="checkbox"
        value={undefined}
      />
      <label>
        Show
      </label>
    </div>
  </div>
  <div
    className="jsx-1638827600 box visualization"
  >
    <div
      className="jsx-704040651 visualization"
    >
      <h2
        className="jsx-704040651"
      >
        <span>
          Visualization
        </span>
      </h2>
      <div
        aria-busy={undefined}
        aria-disabled={undefined}
        aria-expanded={false}
        className="ui search selection dropdown"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        role="combobox"
        tabIndex={undefined}
      >
        <input
          aria-autocomplete="list"
          autoComplete="off"
          className="search"
          onChange={[Function]}
          style={
            Object {
              "width": undefined,
            }
          }
          tabIndex={0}
          type="text"
          value=""
        />
        <div
          aria-live="polite"
          className="default text"
          role="alert"
        >
          Visualization
        </div>
        <i
          aria-hidden="true"
          className="dropdown icon"
          onClick={[Function]}
        />
        <div
          aria-multiselectable={undefined}
          className="menu transition"
          role="listbox"
        >
          <div
            aria-checked={false}
            aria-disabled={undefined}
            aria-selected={true}
            className="selected item"
            onClick={[Function]}
            role="option"
            style={
              Object {
                "pointerEvents": "all",
              }
            }
            withinType={
              Array [
                "SC",
                "MC",
              ]
            }
          >
            <span
              className="text"
            >
              Pie Chart
            </span>
          </div>
          <div
            aria-checked={false}
            aria-disabled={undefined}
            aria-selected={false}
            className="item"
            onClick={[Function]}
            role="option"
            style={
              Object {
                "pointerEvents": "all",
              }
            }
            withinType={
              Array [
                "SC",
                "MC",
              ]
            }
          >
            <span
              className="text"
            >
              Bar Chart
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="jsx-1638827600 box possibilities"
  >
    <div
      className="jsx-37351210 visualization"
    >
      <h2
        className="jsx-37351210"
      >
        <span>
          Possibilities
        </span>
      </h2>
    </div>
  </div>
</div>
`;

exports[`Storyshots layouts StaticLayout 1`] = `
<div
  className="jsx-980208132 staticLayout"
>
  <div
    className="jsx-980208132 content"
  >
    some static content
  </div>
  <footer
    className="jsx-980208132"
  >
    © IBF
  </footer>
</div>
`;

exports[`Storyshots layouts StudentLayout 1`] = `
<div
  className="jsx-3738437786 studentLayout"
>
  <div
    className="jsx-3738437786 header"
  >
    <button
      className="ui basic icon button"
      disabled={undefined}
      onClick={[Function]}
      role="button"
      tabIndex={undefined}
    >
      <i
        aria-hidden="true"
        className="content icon"
      />
    </button>
    <h1
      className="jsx-3738437786"
    >
      title
    </h1>
  </div>
  <div
    className="jsx-3738437786 content"
  >
    <div
      className="jsx-4218096801 sidebar"
    >
      <div
        className="pushable"
      >
        <div
          className="ui vertical labeled icon ui overlay left wide visible sidebar sidebarMenu menu"
        >
          <a
            className="item"
            onClick={[Function]}
          >
            <span>
              Active Question
            </span>
          </a>
          <a
            className="item"
            onClick={[Function]}
          >
            <span>
              Feedback-Channel
            </span>
          </a>
        </div>
        <div
          className="pusher"
        >
          some student content
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots layouts TeacherLayout 1`] = `
<div
  className="jsx-960068550 teacherLayout"
>
  <div
    className="jsx-960068550 content"
  >
    <div
      className="jsx-4218096801 sidebar"
    >
      <div
        className="pushable"
      >
        <div
          className="ui vertical labeled icon ui overlay left wide visible sidebar sidebarMenu menu"
        >
          <a
            className="active item"
            onClick={[Function]}
          >
            <span>
              Question Pool
            </span>
          </a>
          <a
            className="item"
            onClick={[Function]}
          >
            <span>
              Session History
            </span>
          </a>
          <a
            className="item"
            onClick={[Function]}
          >
            <span>
              Running Session
            </span>
          </a>
        </div>
        <div
          className="pusher"
        >
          some teacher content
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots questionTypes/FREE FREE Answering Options (Number restriction) 1`] = `
<div
  className="options"
>
  <div
    className="slider"
  >
    <p>
      900
    </p>
    <p>
      87
    </p>
    <div
      aria-orientation="horizontal"
      aria-valuemax={87}
      aria-valuemin={900}
      aria-valuenow={555}
      className="rangeslider rangeslider-horizontal"
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="rangeslider__fill"
        style={
          Object {
            "width": "0px",
          }
        }
      />
      <div
        className="rangeslider__handle"
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        style={
          Object {
            "left": "0px",
          }
        }
        tabIndex={0}
      >
        <div
          className="rangeslider__handle-label"
        >
          
        </div>
      </div>
      <ul
        className="rangeslider__labels"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots questionTypes/FREE FREE Answering Options (lower bound restriction) 1`] = `
<div
  className="options"
>
  <div>
    <textarea />
    <div>
      <span>
        Min
      </span>
      :
       
      9
    </div>
  </div>
</div>
`;

exports[`Storyshots questionTypes/FREE FREE Answering Options (unrestricted) 1`] = `
<div
  className="options"
>
  <div>
    <textarea />
  </div>
</div>
`;

exports[`Storyshots questionTypes/FREE FREE Answering Options (upper bound restriction) 1`] = `
<div
  className="options"
>
  <div>
    <textarea />
    <div>
      <span>
        Max
      </span>
      :
       
      87
    </div>
  </div>
</div>
`;

exports[`Storyshots questionTypes/FREE FREE Creation Options 1`] = `
<div
  className="field"
>
  <label
    className="jsx-1330628297"
    htmlFor="options"
  >
    <span>
      Options
    </span>
  </label>
  <div
    className="jsx-1330628297 optionsChooser"
  >
    <button
      className="ui button option"
      disabled={undefined}
      onClick={[Function]}
      role="button"
      tabIndex={undefined}
      type="button"
    >
      <span>
        No Limitations
      </span>
    </button>
    <button
      className="ui button option"
      disabled={undefined}
      onClick={[Function]}
      role="button"
      tabIndex={undefined}
      type="button"
    >
      <span>
        Number Range
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots questionTypes/FREE FREE Creation Preview (Lower bound restriction) 1`] = `
<div
  className="jsx-2332170339 preview"
>
  <div
    className="jsx-2332170339 title"
  >
    Hello
  </div>
  <div
    className="jsx-2332170339 description"
  >
    World!
  </div>
  <div
    className="jsx-2332170339"
  >
    <div
      className="jsx-2332170339 freeText"
    >
      <div
        className="jsx-2332170339 box"
      />
    </div>
    <div
      className="jsx-2332170339"
    >
      <span>
        Min
      </span>
      :
       
      90
    </div>
  </div>
  <div
    className="jsx-2332170339 button"
  >
    <span>
      Submit
    </span>
  </div>
</div>
`;

exports[`Storyshots questionTypes/FREE FREE Creation Preview (Number-Range) 1`] = `
<div
  className="jsx-2332170339 preview"
>
  <div
    className="jsx-2332170339 title"
  >
    Hello
  </div>
  <div
    className="jsx-2332170339 description"
  >
    World!
  </div>
  <div
    className="jsx-2332170339"
  >
    <div
      className="jsx-2332170339 freeText"
    >
      <div
        className="jsx-2332170339 box"
      />
    </div>
    <div
      className="jsx-2332170339"
    >
      <span>
        Min
      </span>
      :
       
      90
    </div>
    <div
      className="jsx-2332170339"
    >
      <span>
        Max
      </span>
      :
       
      900
    </div>
  </div>
  <div
    className="jsx-2332170339 button"
  >
    <span>
      Submit
    </span>
  </div>
</div>
`;

exports[`Storyshots questionTypes/FREE FREE Creation Preview (unrestricted) 1`] = `
<div
  className="jsx-2332170339 preview"
>
  <div
    className="jsx-2332170339 title"
  >
    Hello
  </div>
  <div
    className="jsx-2332170339 description"
  >
    World!
  </div>
  <div
    className="jsx-2332170339"
  >
    <div
      className="jsx-2332170339 freeText"
    >
      <div
        className="jsx-2332170339 box"
      />
    </div>
  </div>
  <div
    className="jsx-2332170339 button"
  >
    <span>
      Submit
    </span>
  </div>
</div>
`;

exports[`Storyshots questionTypes/SC SC Answering Options 1`] = `
<div
  className="jsx-3454815952 options"
>
  <div
    className="jsx-3454815952 option"
  >
    <button
      className="ui basic fluid button"
      disabled={undefined}
      onClick={[Function]}
      role="button"
      tabIndex={undefined}
    >
      answer 1
    </button>
  </div>
  <div
    className="jsx-3454815952 option active"
  >
    <button
      className="ui basic fluid button"
      disabled={undefined}
      onClick={[Function]}
      role="button"
      tabIndex={undefined}
    >
      antwort 2
    </button>
  </div>
  <div
    className="jsx-3454815952 option"
  >
    <button
      className="ui basic fluid button"
      disabled={undefined}
      onClick={[Function]}
      role="button"
      tabIndex={undefined}
    >
      option 3
    </button>
  </div>
</div>
`;

exports[`Storyshots questionTypes/SC SC Creation Option (correct) 1`] = `
<div
  className="jsx-2247491703 option correct"
>
  <button
    className="jsx-2247491703 leftAction"
    onClick={undefined}
  >
    <svg
      fill="currentColor"
      height="1em"
      preserveAspectRatio="xMidYMid meet"
      style={
        Object {
          "color": undefined,
          "verticalAlign": "middle",
        }
      }
      viewBox="0 0 40 40"
      width="1em"
    >
      <g>
        <path
          d="m15.9 30.7v-15.7q0-0.3-0.2-0.5t-0.5-0.2h-1.4q-0.3 0-0.5 0.2t-0.2 0.5v15.7q0 0.3 0.2 0.5t0.5 0.2h1.4q0.3 0 0.5-0.2t0.2-0.5z m5.7 0v-15.7q0-0.3-0.2-0.5t-0.5-0.2h-1.4q-0.3 0-0.5 0.2t-0.2 0.5v15.7q0 0.3 0.2 0.5t0.5 0.2h1.4q0.3 0 0.5-0.2t0.2-0.5z m5.8 0v-15.7q0-0.3-0.2-0.5t-0.6-0.2h-1.4q-0.3 0-0.5 0.2t-0.2 0.5v15.7q0 0.3 0.2 0.5t0.5 0.2h1.4q0.4 0 0.6-0.2t0.2-0.5z m-12.2-22.1h10l-1.1-2.6q-0.1-0.2-0.3-0.3h-7.1q-0.2 0.1-0.4 0.3z m20.7 0.7v1.4q0 0.3-0.2 0.5t-0.5 0.2h-2.1v21.2q0 1.8-1.1 3.2t-2.5 1.3h-18.6q-1.4 0-2.5-1.3t-1-3.1v-21.3h-2.2q-0.3 0-0.5-0.2t-0.2-0.5v-1.4q0-0.3 0.2-0.5t0.5-0.2h6.9l1.6-3.8q0.3-0.8 1.2-1.4t1.7-0.5h7.2q0.9 0 1.8 0.5t1.2 1.4l1.5 3.8h6.9q0.3 0 0.5 0.2t0.2 0.5z"
        />
      </g>
    </svg>
  </button>
  <button
    className="jsx-2247491703 toggle correct"
    onClick={undefined}
  >
    TRUE
  </button>
  <div
    className="jsx-2247491703 name"
  >
    That's true!
  </div>
</div>
`;

exports[`Storyshots questionTypes/SC SC Creation Option (incorrect) 1`] = `
<div
  className="jsx-2247491703 option"
>
  <button
    className="jsx-2247491703 leftAction"
    onClick={undefined}
  >
    <svg
      fill="currentColor"
      height="1em"
      preserveAspectRatio="xMidYMid meet"
      style={
        Object {
          "color": undefined,
          "verticalAlign": "middle",
        }
      }
      viewBox="0 0 40 40"
      width="1em"
    >
      <g>
        <path
          d="m15.9 30.7v-15.7q0-0.3-0.2-0.5t-0.5-0.2h-1.4q-0.3 0-0.5 0.2t-0.2 0.5v15.7q0 0.3 0.2 0.5t0.5 0.2h1.4q0.3 0 0.5-0.2t0.2-0.5z m5.7 0v-15.7q0-0.3-0.2-0.5t-0.5-0.2h-1.4q-0.3 0-0.5 0.2t-0.2 0.5v15.7q0 0.3 0.2 0.5t0.5 0.2h1.4q0.3 0 0.5-0.2t0.2-0.5z m5.8 0v-15.7q0-0.3-0.2-0.5t-0.6-0.2h-1.4q-0.3 0-0.5 0.2t-0.2 0.5v15.7q0 0.3 0.2 0.5t0.5 0.2h1.4q0.4 0 0.6-0.2t0.2-0.5z m-12.2-22.1h10l-1.1-2.6q-0.1-0.2-0.3-0.3h-7.1q-0.2 0.1-0.4 0.3z m20.7 0.7v1.4q0 0.3-0.2 0.5t-0.5 0.2h-2.1v21.2q0 1.8-1.1 3.2t-2.5 1.3h-18.6q-1.4 0-2.5-1.3t-1-3.1v-21.3h-2.2q-0.3 0-0.5-0.2t-0.2-0.5v-1.4q0-0.3 0.2-0.5t0.5-0.2h6.9l1.6-3.8q0.3-0.8 1.2-1.4t1.7-0.5h7.2q0.9 0 1.8 0.5t1.2 1.4l1.5 3.8h6.9q0.3 0 0.5 0.2t0.2 0.5z"
        />
      </g>
    </svg>
  </button>
  <button
    className="jsx-2247491703 toggle"
    onClick={undefined}
  >
    FALSE
  </button>
  <div
    className="jsx-2247491703 name"
  >
    So wrong!
  </div>
</div>
`;

exports[`Storyshots questionTypes/SC SC Creation Placeholder 1`] = `
<div
  className="jsx-327855630 jsx-2247491703 option"
>
  <button
    className="jsx-327855630 jsx-2247491703 leftAction"
    onClick={[Function]}
    type="button"
  >
    <svg
      fill="currentColor"
      height="1em"
      preserveAspectRatio="xMidYMid meet"
      style={
        Object {
          "color": undefined,
          "verticalAlign": "middle",
        }
      }
      viewBox="0 0 40 40"
      width="1em"
    >
      <g>
        <path
          d="m35.9 16.4v4.3q0 0.9-0.6 1.5t-1.5 0.7h-9.3v9.2q0 0.9-0.6 1.6t-1.5 0.6h-4.3q-0.9 0-1.5-0.6t-0.7-1.6v-9.2h-9.3q-0.9 0-1.5-0.7t-0.6-1.5v-4.3q0-0.9 0.6-1.5t1.5-0.6h9.3v-9.3q0-0.9 0.7-1.5t1.5-0.6h4.3q0.9 0 1.5 0.6t0.6 1.5v9.3h9.3q0.9 0 1.5 0.6t0.6 1.5z"
        />
      </g>
    </svg>
  </button>
  <button
    className="jsx-327855630 jsx-2247491703 toggle"
    onClick={[Function]}
    type="button"
  >
    FALSE
  </button>
  <input
    className="jsx-327855630 jsx-2247491703"
    onChange={[Function]}
    type="text"
    value=""
  />
  <button
    className="jsx-327855630 jsx-2247491703 rightAction"
    onClick={[Function]}
    type="button"
  >
    <svg
      fill="currentColor"
      height="1em"
      preserveAspectRatio="xMidYMid meet"
      style={
        Object {
          "color": undefined,
          "verticalAlign": "middle",
        }
      }
      viewBox="0 0 40 40"
      width="1em"
    >
      <g>
        <path
          d="m11.6 34.3h17.1v-8.6h-17.1v8.6z m20 0h2.8v-20q0-0.3-0.2-0.9t-0.4-0.7l-6.3-6.3q-0.2-0.2-0.8-0.5t-0.8-0.2v9.3q0 0.9-0.7 1.5t-1.5 0.6h-12.8q-0.9 0-1.6-0.6t-0.6-1.5v-9.3h-2.8v28.6h2.8v-9.3q0-0.9 0.6-1.5t1.6-0.6h18.5q0.9 0 1.5 0.6t0.7 1.5v9.3z m-8.6-20.7v-7.2q0-0.3-0.2-0.5t-0.5-0.2h-4.3q-0.3 0-0.5 0.2t-0.2 0.5v7.2q0 0.3 0.2 0.5t0.5 0.2h4.3q0.3 0 0.5-0.2t0.2-0.5z m14.3 0.7v20.7q0 0.9-0.6 1.5t-1.6 0.6h-30q-0.8 0-1.5-0.6t-0.6-1.5v-30q0-0.9 0.6-1.5t1.5-0.6h20.8q0.9 0 1.9 0.4t1.7 1.1l6.3 6.2q0.6 0.6 1 1.7t0.5 2z"
        />
      </g>
    </svg>
  </button>
</div>
`;

exports[`Storyshots questionTypes/SC SC Creation Preview 1`] = `
<div
  className="jsx-1303707464 preview"
>
  <div
    className="jsx-1303707464 title"
  >
    Hello question
  </div>
  <div
    className="jsx-1303707464 description"
  >
    abcd
  </div>
  <div
    className="jsx-1303707464 options"
  >
    <div
      className="jsx-3454815952 options"
    >
      <div
        className="jsx-3454815952 option"
      >
        <button
          className="ui basic fluid button"
          disabled={undefined}
          onClick={[Function]}
          role="button"
          tabIndex={undefined}
        >
          answer 1
        </button>
      </div>
      <div
        className="jsx-3454815952 option"
      >
        <button
          className="ui basic fluid button"
          disabled={undefined}
          onClick={[Function]}
          role="button"
          tabIndex={undefined}
        >
          antwort 2
        </button>
      </div>
      <div
        className="jsx-3454815952 option"
      >
        <button
          className="ui basic fluid button"
          disabled={undefined}
          onClick={[Function]}
          role="button"
          tabIndex={undefined}
        >
          option 3
        </button>
      </div>
    </div>
  </div>
  <div
    className="jsx-1303707464 button"
  >
    <span>
      Submit
    </span>
  </div>
</div>
`;

exports[`Storyshots questionTypes/components TypeChooser 1`] = `
<div
  className="field"
>
  <label
    className="jsx-910700654"
    htmlFor="types"
  >
    <span>
      Question type
    </span>
  </label>
  <div
    className="jsx-910700654 typeChooser"
  >
    <button
      className="ui button type active"
      disabled={undefined}
      onClick={[Function]}
      role="button"
      tabIndex={undefined}
    >
      Single-Choice
    </button>
    <button
      className="ui button type"
      disabled={undefined}
      onClick={[Function]}
      role="button"
      tabIndex={undefined}
    >
      Multiple-Choice
    </button>
    <button
      className="ui button type"
      disabled={undefined}
      onClick={[Function]}
      role="button"
      tabIndex={undefined}
    >
      Free-Form
    </button>
  </div>
</div>
`;

exports[`Storyshots questions ContentInput 1`] = `
<form
  className="ui form"
>
  <div
    className="jsx-718709431 field contentInput"
  >
    <label
      className="jsx-718709431"
      htmlFor="content"
    >
      <span>
        Content
      </span>
    </label>
    <textarea
      className="jsx-718709431"
      name="content"
      onChange={[Function]}
      value="hello world"
    />
  </div>
</form>
`;

exports[`Storyshots questions Question (MC, >1 versions) 1`] = `
<div
  className="jsx-1793873737 question"
>
  <div
    className="jsx-1793873737 wrapper"
  >
    <h2
      className="jsx-1793873737 title"
    >
      #
      4c821db
       - 
      This is a long question
       
      (v2)
    </h2>
    <div
      className="jsx-1793873737 tags"
    >
      <div
        className="jsx-3461493153 questionTags"
      >
        <div
          className="jsx-3461493153 type tag"
        >
          MC
        </div>
        <div
          className="jsx-3461493153 tag"
        >
          CAPM
        </div>
        <div
          className="jsx-3461493153 tag"
        >
          Risk
        </div>
      </div>
    </div>
    <div
      className="jsx-1793873737 details"
    >
      <div
        className="jsx-3832213538 questionDetails"
      >
        <div
          className="jsx-3832213538 column"
        >
          Test1
        </div>
        <div
          className="jsx-3832213538 column"
        >
          Test2
        </div>
        <div
          className="jsx-3832213538 column"
        >
          Test3
        </div>
        <div
          className="jsx-3832213538 column"
        >
          <div
            className="jsx-319169000"
          >
            <h3
              className="jsx-319169000 listHeader"
            >
              <span>
                Last used
              </span>
            </h3>
            <ul
              className="jsx-319169000 list"
            >
              <li
                className="jsx-319169000 listItem"
              >
                2015-02-08 14:32:11
              </li>
              <li
                className="jsx-319169000 listItem"
              >
                2016-09-09 15:22:09
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots questions Question (MC, no tags) 1`] = `
<div
  className="jsx-1793873737 question"
>
  <div
    className="jsx-1793873737 wrapper"
  >
    <h2
      className="jsx-1793873737 title"
    >
      #
      4c821db
       - 
      This is a long question
       
    </h2>
    <div
      className="jsx-1793873737 tags"
    >
      <div
        className="jsx-3461493153 questionTags"
      >
        <div
          className="jsx-3461493153 type tag"
        >
          MC
        </div>
      </div>
    </div>
    <div
      className="jsx-1793873737 details"
    >
      <div
        className="jsx-3832213538 questionDetails"
      >
        <div
          className="jsx-3832213538 column"
        >
          Test1
        </div>
        <div
          className="jsx-3832213538 column"
        >
          Test2
        </div>
        <div
          className="jsx-3832213538 column"
        >
          Test3
        </div>
        <div
          className="jsx-3832213538 column"
        >
          <div
            className="jsx-319169000"
          >
            <h3
              className="jsx-319169000 listHeader"
            >
              <span>
                Last used
              </span>
            </h3>
            <ul
              className="jsx-319169000 list"
            >
              <li
                className="jsx-319169000 listItem"
              >
                2015-02-08 14:32:11
              </li>
              <li
                className="jsx-319169000 listItem"
              >
                2016-09-09 15:22:09
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots questions Question (SC, 1 version) 1`] = `
<div
  className="jsx-1793873737 question"
>
  <div
    className="jsx-1793873737 wrapper"
  >
    <h2
      className="jsx-1793873737 title"
    >
      #
      4c821db
       - 
      This is a long question
       
    </h2>
    <div
      className="jsx-1793873737 tags"
    >
      <div
        className="jsx-3461493153 questionTags"
      >
        <div
          className="jsx-3461493153 type tag"
        >
          SC
        </div>
        <div
          className="jsx-3461493153 tag"
        >
          CAPM
        </div>
        <div
          className="jsx-3461493153 tag"
        >
          Risk
        </div>
      </div>
    </div>
    <div
      className="jsx-1793873737 details"
    >
      <div
        className="jsx-3832213538 questionDetails"
      >
        <div
          className="jsx-3832213538 column"
        >
          Test1
        </div>
        <div
          className="jsx-3832213538 column"
        >
          Test2
        </div>
        <div
          className="jsx-3832213538 column"
        >
          Test3
        </div>
        <div
          className="jsx-3832213538 column"
        >
          <div
            className="jsx-319169000"
          >
            <h3
              className="jsx-319169000 listHeader"
            >
              <span>
                Last used
              </span>
            </h3>
            <ul
              className="jsx-319169000 list"
            >
              <li
                className="jsx-319169000 listItem"
              >
                2015-02-08 14:32:11
              </li>
              <li
                className="jsx-319169000 listItem"
              >
                2016-09-09 15:22:09
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots questions QuestionBlock (empty) 1`] = `
<div
  className="jsx-3449966730 questionBlock"
>
  <div
    className="jsx-3449966730 timeLimit"
  >
    <i
      aria-hidden="true"
      className="clock icon"
    />
    60
    s
  </div>
  <div
    className="jsx-3449966730 showSolution"
  >
    <i
      aria-hidden="true"
      className="hide icon"
    />
  </div>
  <div
    className="jsx-3449966730 questions"
  />
</div>
`;

exports[`Storyshots questions QuestionBlock 1`] = `
<div
  className="jsx-3449966730 questionBlock"
>
  <div
    className="jsx-3449966730 timeLimit"
  >
    <i
      aria-hidden="true"
      className="clock icon"
    />
    60
    s
  </div>
  <div
    className="jsx-3449966730 showSolution"
  >
    <i
      aria-hidden="true"
      className="hide icon"
    />
  </div>
  <div
    className="jsx-3449966730 questions"
  >
    <div
      className="jsx-2849987926 questionSingle"
    >
      <div
        className="jsx-2849987926 id"
      >
        #4c821db
      </div>
      <div
        className="jsx-2849987926 type"
      >
        SC
      </div>
      <div
        className="jsx-2849987926 content"
      >
        This is a long question
      </div>
    </div>
    <div
      className="jsx-2849987926 questionSingle"
    >
      <div
        className="jsx-2849987926 id"
      >
        #4c821db
      </div>
      <div
        className="jsx-2849987926 type"
      >
        SC
      </div>
      <div
        className="jsx-2849987926 content"
      >
        This is a long question
      </div>
    </div>
    <div
      className="jsx-2849987926 questionSingle"
    >
      <div
        className="jsx-2849987926 id"
      >
        #4c821db
      </div>
      <div
        className="jsx-2849987926 type"
      >
        SC
      </div>
      <div
        className="jsx-2849987926 content"
      >
        This is a long question
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots questions QuestionDetails 1`] = `
<div
  className="jsx-3832213538 questionDetails"
>
  <div
    className="jsx-3832213538 column"
  >
    Test1
  </div>
  <div
    className="jsx-3832213538 column"
  >
    Test2
  </div>
  <div
    className="jsx-3832213538 column"
  >
    Test3
  </div>
  <div
    className="jsx-3832213538 column"
  >
    <div
      className="jsx-319169000"
    >
      <h3
        className="jsx-319169000 listHeader"
      >
        <span>
          Last used
        </span>
      </h3>
      <ul
        className="jsx-319169000 list"
      >
        <li
          className="jsx-319169000 listItem"
        >
          20.12.2017
        </li>
        <li
          className="jsx-319169000 listItem"
        >
          19.12.2017
        </li>
        <li
          className="jsx-319169000 listItem"
        >
          10.10.2017
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Storyshots questions QuestionList (creation mode) 1`] = `
<div
  className="jsx-1561297864 questionList"
>
  <div
    className="jsx-1793873737 question creationMode draggable"
  >
    <div
      className="jsx-1793873737 sessionMembership"
    >
      <input
        checked={false}
        className="jsx-1793873737 ui checkbox"
        name="check-1"
        onClick={[Function]}
        type="checkbox"
      />
    </div>
    <div
      className="jsx-1793873737 wrapper"
    >
      <h2
        className="jsx-1793873737 title"
      >
        #
        1
         - 
        question1
         
      </h2>
      <div
        className="jsx-1793873737 tags"
      >
        <div
          className="jsx-3461493153 questionTags"
        >
          <div
            className="jsx-3461493153 type tag"
          >
            SC
          </div>
          <div
            className="jsx-3461493153 tag"
          >
            tag1
          </div>
          <div
            className="jsx-3461493153 tag"
          >
            tag2
          </div>
        </div>
      </div>
      <div
        className="jsx-1793873737 details"
      >
        <div
          className="jsx-3832213538 questionDetails"
        >
          <div
            className="jsx-3832213538 column"
          >
            Test1
          </div>
          <div
            className="jsx-3832213538 column"
          >
            Test2
          </div>
          <div
            className="jsx-3832213538 column"
          >
            Test3
          </div>
          <div
            className="jsx-3832213538 column"
          >
            <div
              className="jsx-319169000"
            >
              <h3
                className="jsx-319169000 listHeader"
              >
                <span>
                  Last used
                </span>
              </h3>
              <ul
                className="jsx-319169000 list"
              >
                <li
                  className="jsx-319169000 listItem"
                >
                  12.06.1993 00:06:00
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="jsx-1793873737 question creationMode draggable"
  >
    <div
      className="jsx-1793873737 sessionMembership"
    >
      <input
        checked={false}
        className="jsx-1793873737 ui checkbox"
        name="check-2"
        onClick={[Function]}
        type="checkbox"
      />
    </div>
    <div
      className="jsx-1793873737 wrapper"
    >
      <h2
        className="jsx-1793873737 title"
      >
        #
        2
         - 
        question2
         
        (v2)
      </h2>
      <div
        className="jsx-1793873737 tags"
      >
        <div
          className="jsx-3461493153 questionTags"
        >
          <div
            className="jsx-3461493153 type tag"
          >
            MC
          </div>
          <div
            className="jsx-3461493153 tag"
          >
            tag3
          </div>
          <div
            className="jsx-3461493153 tag"
          >
            tag2
          </div>
        </div>
      </div>
      <div
        className="jsx-1793873737 details"
      >
        <div
          className="jsx-3832213538 questionDetails"
        >
          <div
            className="jsx-3832213538 column"
          >
            Test1
          </div>
          <div
            className="jsx-3832213538 column"
          >
            Test2
          </div>
          <div
            className="jsx-3832213538 column"
          >
            Test3
          </div>
          <div
            className="jsx-3832213538 column"
          >
            <div
              className="jsx-319169000"
            >
              <h3
                className="jsx-319169000 listHeader"
              >
                <span>
                  Last used
                </span>
              </h3>
              <ul
                className="jsx-319169000 list"
              >
                <li
                  className="jsx-319169000 listItem"
                >
                  12.07.1993 00:07:00
                </li>
                <li
                  className="jsx-319169000 listItem"
                >
                  12.07.1994 00:07:00
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots questions QuestionList 1`] = `
<div
  className="jsx-1561297864 questionList"
>
  <div
    className="jsx-1793873737 question"
  >
    <div
      className="jsx-1793873737 wrapper"
    >
      <h2
        className="jsx-1793873737 title"
      >
        #
        1
         - 
        question1
         
      </h2>
      <div
        className="jsx-1793873737 tags"
      >
        <div
          className="jsx-3461493153 questionTags"
        >
          <div
            className="jsx-3461493153 type tag"
          >
            SC
          </div>
          <div
            className="jsx-3461493153 tag"
          >
            tag1
          </div>
          <div
            className="jsx-3461493153 tag"
          >
            tag2
          </div>
        </div>
      </div>
      <div
        className="jsx-1793873737 details"
      >
        <div
          className="jsx-3832213538 questionDetails"
        >
          <div
            className="jsx-3832213538 column"
          >
            Test1
          </div>
          <div
            className="jsx-3832213538 column"
          >
            Test2
          </div>
          <div
            className="jsx-3832213538 column"
          >
            Test3
          </div>
          <div
            className="jsx-3832213538 column"
          >
            <div
              className="jsx-319169000"
            >
              <h3
                className="jsx-319169000 listHeader"
              >
                <span>
                  Last used
                </span>
              </h3>
              <ul
                className="jsx-319169000 list"
              >
                <li
                  className="jsx-319169000 listItem"
                >
                  12.06.1993 00:06:00
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="jsx-1793873737 question"
  >
    <div
      className="jsx-1793873737 wrapper"
    >
      <h2
        className="jsx-1793873737 title"
      >
        #
        2
         - 
        question2
         
        (v2)
      </h2>
      <div
        className="jsx-1793873737 tags"
      >
        <div
          className="jsx-3461493153 questionTags"
        >
          <div
            className="jsx-3461493153 type tag"
          >
            MC
          </div>
          <div
            className="jsx-3461493153 tag"
          >
            tag3
          </div>
          <div
            className="jsx-3461493153 tag"
          >
            tag2
          </div>
        </div>
      </div>
      <div
        className="jsx-1793873737 details"
      >
        <div
          className="jsx-3832213538 questionDetails"
        >
          <div
            className="jsx-3832213538 column"
          >
            Test1
          </div>
          <div
            className="jsx-3832213538 column"
          >
            Test2
          </div>
          <div
            className="jsx-3832213538 column"
          >
            Test3
          </div>
          <div
            className="jsx-3832213538 column"
          >
            <div
              className="jsx-319169000"
            >
              <h3
                className="jsx-319169000 listHeader"
              >
                <span>
                  Last used
                </span>
              </h3>
              <ul
                className="jsx-319169000 list"
              >
                <li
                  className="jsx-319169000 listItem"
                >
                  12.07.1993 00:07:00
                </li>
                <li
                  className="jsx-319169000 listItem"
                >
                  12.07.1994 00:07:00
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots questions QuestionSingle 1`] = `
<div
  className="jsx-2849987926 questionSingle"
>
  <div
    className="jsx-2849987926 id"
  >
    #4c821db
  </div>
  <div
    className="jsx-2849987926 type"
  >
    SC
  </div>
  <div
    className="jsx-2849987926 content"
  >
    This is a long question
  </div>
</div>
`;

exports[`Storyshots questions QuestionTags 1`] = `
<div
  className="jsx-3461493153 questionTags"
>
  <div
    className="jsx-3461493153 type tag"
  >
    SC
  </div>
  <div
    className="jsx-3461493153 tag"
  >
    CAPM
  </div>
  <div
    className="jsx-3461493153 tag"
  >
    Risk
  </div>
</div>
`;

exports[`Storyshots questions TagList 1`] = `
<div
  className="ui large selection list"
  role="list"
>
  <div
    className="item listItem"
    data-value={undefined}
    onClick={[Function]}
    role="listitem"
  >
    <i
      aria-hidden="true"
      className="folder outline icon"
    />
    <div
      className="content"
    >
      CAPM
    </div>
  </div>
  <div
    className="active item listItem"
    data-value={undefined}
    onClick={[Function]}
    role="listitem"
  >
    <i
      aria-hidden="true"
      className="folder icon"
    />
    <div
      className="content"
    >
      CF
    </div>
  </div>
</div>
`;

exports[`Storyshots questions TitleInput 1`] = `
<form
  className="ui form"
>
  <div
    className="field"
  >
    <label
      htmlFor="questionTitle"
    >
      <span>
        Question title
      </span>
    </label>
    <input
      name="questionTitle"
      onChange={[Function]}
      type="text"
      value="my title"
    />
  </div>
</form>
`;

exports[`Storyshots sessions QuestionDropzone 1`] = `
<div
  style={
    Object {
      "height": 100,
      "width": 100,
    }
  }
>
  <div
    className="jsx-663420075 dropzone"
  >
    <svg
      fill="currentColor"
      height="1em"
      preserveAspectRatio="xMidYMid meet"
      style={
        Object {
          "color": undefined,
          "verticalAlign": "middle",
        }
      }
      viewBox="0 0 40 40"
      width="1em"
    >
      <g>
        <path
          d="m35.9 16.4v4.3q0 0.9-0.6 1.5t-1.5 0.7h-9.3v9.2q0 0.9-0.6 1.6t-1.5 0.6h-4.3q-0.9 0-1.5-0.6t-0.7-1.6v-9.2h-9.3q-0.9 0-1.5-0.7t-0.6-1.5v-4.3q0-0.9 0.6-1.5t1.5-0.6h9.3v-9.3q0-0.9 0.7-1.5t1.5-0.6h4.3q0.9 0 1.5 0.6t0.6 1.5v9.3h9.3q0.9 0 1.5 0.6t0.6 1.5z"
        />
      </g>
    </svg>
  </div>
</div>
`;

exports[`Storyshots sessions Session 1`] = `
<div
  className="jsx-1670121988 session"
>
  <h2
    className="jsx-1670121988 title"
  >
    4c821db
     - 
    Long session
  </h2>
  <div
    className="jsx-1670121988 date"
  >
    <span>
      Created on
    </span>
     
    08.02.2015 14:02:00
  </div>
  <div
    className="jsx-1670121988 details"
  >
    <div
      className="jsx-1670121988 block"
    >
      <div
        className="jsx-3449966730 questionBlock"
      >
        <div
          className="jsx-3449966730 timeLimit"
        >
          <i
            aria-hidden="true"
            className="clock icon"
          />
          60
          s
        </div>
        <div
          className="jsx-3449966730 showSolution"
        >
          <i
            aria-hidden="true"
            className="hide icon"
          />
        </div>
        <div
          className="jsx-3449966730 questions"
        >
          <div
            className="jsx-2849987926 questionSingle"
          >
            <div
              className="jsx-2849987926 id"
            >
              #4c821db
            </div>
            <div
              className="jsx-2849987926 type"
            >
              SC
            </div>
            <div
              className="jsx-2849987926 content"
            >
              This is a long question
            </div>
          </div>
          <div
            className="jsx-2849987926 questionSingle"
          >
            <div
              className="jsx-2849987926 id"
            >
              #4c821db
            </div>
            <div
              className="jsx-2849987926 type"
            >
              SC
            </div>
            <div
              className="jsx-2849987926 content"
            >
              This is a long question
            </div>
          </div>
          <div
            className="jsx-2849987926 questionSingle"
          >
            <div
              className="jsx-2849987926 id"
            >
              #4c821db
            </div>
            <div
              className="jsx-2849987926 type"
            >
              SC
            </div>
            <div
              className="jsx-2849987926 content"
            >
              This is a long question
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="jsx-1670121988 actionArea"
    >
      <button
        className="ui icon left labeled button"
        disabled={undefined}
        onClick={[Function]}
        role="button"
        tabIndex={undefined}
      >
        <i
          aria-hidden="true"
          className="play icon"
        />
        Start
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots sessions SessionList 1`] = `
<div
  className="jsx-2309132107"
>
  <div
    className="jsx-2309132107 session"
  >
    No session is currently running.
  </div>
  <div
    className="jsx-2309132107 session"
  >
    <div
      className="jsx-1670121988 session"
    >
      <h2
        className="jsx-1670121988 title"
      >
        4c821db
         - 
        Long session
      </h2>
      <div
        className="jsx-1670121988 date"
      >
        <span>
          Created on
        </span>
         
        08.02.2015 14:02:00
      </div>
      <div
        className="jsx-1670121988 details"
      >
        <div
          className="jsx-1670121988 block"
        >
          <div
            className="jsx-3449966730 questionBlock"
          >
            <div
              className="jsx-3449966730 timeLimit"
            >
              <i
                aria-hidden="true"
                className="clock icon"
              />
              60
              s
            </div>
            <div
              className="jsx-3449966730 showSolution"
            >
              <i
                aria-hidden="true"
                className="hide icon"
              />
            </div>
            <div
              className="jsx-3449966730 questions"
            >
              <div
                className="jsx-2849987926 questionSingle"
              >
                <div
                  className="jsx-2849987926 id"
                >
                  #4c821db
                </div>
                <div
                  className="jsx-2849987926 type"
                >
                  SC
                </div>
                <div
                  className="jsx-2849987926 content"
                >
                  This is a long question
                </div>
              </div>
              <div
                className="jsx-2849987926 questionSingle"
              >
                <div
                  className="jsx-2849987926 id"
                >
                  #4c821db
                </div>
                <div
                  className="jsx-2849987926 type"
                >
                  SC
                </div>
                <div
                  className="jsx-2849987926 content"
                >
                  This is a long question
                </div>
              </div>
              <div
                className="jsx-2849987926 questionSingle"
              >
                <div
                  className="jsx-2849987926 id"
                >
                  #4c821db
                </div>
                <div
                  className="jsx-2849987926 type"
                >
                  SC
                </div>
                <div
                  className="jsx-2849987926 content"
                >
                  This is a long question
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="jsx-1670121988 actionArea"
        >
          <button
            className="ui icon left labeled button"
            disabled={undefined}
            onClick={[Function]}
            role="button"
            tabIndex={undefined}
          >
            <i
              aria-hidden="true"
              className="play icon"
            />
            Start
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="jsx-2309132107 session"
  >
    <div
      className="jsx-1670121988 session"
    >
      <h2
        className="jsx-1670121988 title"
      >
        4c821db
         - 
        Long session
      </h2>
      <div
        className="jsx-1670121988 date"
      >
        <span>
          Created on
        </span>
         
        08.02.2015 14:02:00
      </div>
      <div
        className="jsx-1670121988 details"
      >
        <div
          className="jsx-1670121988 block"
        >
          <div
            className="jsx-3449966730 questionBlock"
          >
            <div
              className="jsx-3449966730 timeLimit"
            >
              <i
                aria-hidden="true"
                className="clock icon"
              />
              60
              s
            </div>
            <div
              className="jsx-3449966730 showSolution"
            >
              <i
                aria-hidden="true"
                className="hide icon"
              />
            </div>
            <div
              className="jsx-3449966730 questions"
            >
              <div
                className="jsx-2849987926 questionSingle"
              >
                <div
                  className="jsx-2849987926 id"
                >
                  #4c821db
                </div>
                <div
                  className="jsx-2849987926 type"
                >
                  SC
                </div>
                <div
                  className="jsx-2849987926 content"
                >
                  This is a long question
                </div>
              </div>
              <div
                className="jsx-2849987926 questionSingle"
              >
                <div
                  className="jsx-2849987926 id"
                >
                  #4c821db
                </div>
                <div
                  className="jsx-2849987926 type"
                >
                  SC
                </div>
                <div
                  className="jsx-2849987926 content"
                >
                  This is a long question
                </div>
              </div>
              <div
                className="jsx-2849987926 questionSingle"
              >
                <div
                  className="jsx-2849987926 id"
                >
                  #4c821db
                </div>
                <div
                  className="jsx-2849987926 type"
                >
                  SC
                </div>
                <div
                  className="jsx-2849987926 content"
                >
                  This is a long question
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="jsx-1670121988 actionArea"
        >
          <button
            className="ui icon left labeled button"
            disabled={undefined}
            onClick={[Function]}
            role="button"
            tabIndex={undefined}
          >
            <i
              aria-hidden="true"
              className="play icon"
            />
            Start
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots sessions SessionTimeline 1`] = `
<div
  className="jsx-265954221 sessionTimeline"
>
  <div
    className="jsx-265954221 topRow"
  >
    <div
      className="jsx-265954221 startingTime"
    >
      <i
        aria-hidden="true"
        className="time icon"
      />
       18:17:22
    </div>
    <div
      className="jsx-265954221 runningTime"
    >
      <i
        aria-hidden="true"
        className="play circle icon"
      />
       12:56
    </div>
  </div>
  <div
    className="jsx-265954221 blocks"
  >
    <div
      className="jsx-265954221 block"
    >
      <div
        className="jsx-3449966730 questionBlock"
      >
        <div
          className="jsx-3449966730 timeLimit"
        >
          <i
            aria-hidden="true"
            className="clock icon"
          />
          60
          s
        </div>
        <div
          className="jsx-3449966730 showSolution"
        >
          <i
            aria-hidden="true"
            className="unhide icon"
          />
        </div>
        <div
          className="jsx-3449966730 questions"
        >
          <div
            className="jsx-2849987926 questionSingle"
          >
            <div
              className="jsx-2849987926 id"
            >
              #4c821db
            </div>
            <div
              className="jsx-2849987926 type"
            >
              SC
            </div>
            <div
              className="jsx-2849987926 content"
            >
              This is a long question
            </div>
          </div>
          <div
            className="jsx-2849987926 questionSingle"
          >
            <div
              className="jsx-2849987926 id"
            >
              #4c821db
            </div>
            <div
              className="jsx-2849987926 type"
            >
              SC
            </div>
            <div
              className="jsx-2849987926 content"
            >
              This is a long question
            </div>
          </div>
          <div
            className="jsx-2849987926 questionSingle"
          >
            <div
              className="jsx-2849987926 id"
            >
              #4c821db
            </div>
            <div
              className="jsx-2849987926 type"
            >
              SC
            </div>
            <div
              className="jsx-2849987926 content"
            >
              This is a long question
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="jsx-265954221 buttons"
  >
    <button
      className="ui large icon left labeled button"
      disabled={undefined}
      onClick={[Function]}
      role="button"
      tabIndex={undefined}
    >
      <i
        aria-hidden="true"
        className="left arrow icon"
      />
      Previous
    </button>
    <button
      className="ui large icon primary right labeled button"
      disabled={undefined}
      onClick={[Function]}
      role="button"
      tabIndex={undefined}
    >
      <i
        aria-hidden="true"
        className="right arrow icon"
      />
      Next
    </button>
  </div>
</div>
`;

exports[`Storyshots sessions SessionTimelineInput 1`] = `
<div
  className="jsx-3047766213 sessionTimeline"
>
  <div
    className="jsx-3047766213 timelineItem"
  >
    <div
      className="jsx-2849987926 questionSingle"
    >
      <div
        className="jsx-2849987926 id"
      >
        #id1
      </div>
      <div
        className="jsx-2849987926 type"
      >
        SC
      </div>
      <div
        className="jsx-2849987926 content"
      >
        question1
      </div>
    </div>
  </div>
  <div
    className="jsx-3047766213 timelineItem"
  >
    <div
      className="jsx-2849987926 questionSingle"
    >
      <div
        className="jsx-2849987926 id"
      >
        #id2
      </div>
      <div
        className="jsx-2849987926 type"
      >
        FREE
      </div>
      <div
        className="jsx-2849987926 content"
      >
        question2
      </div>
    </div>
  </div>
  <div
    className="jsx-3047766213 timelineItem"
  >
    <div
      className="jsx-663420075 dropzone"
    >
      <svg
        fill="currentColor"
        height="1em"
        preserveAspectRatio="xMidYMid meet"
        style={
          Object {
            "color": undefined,
            "verticalAlign": "middle",
          }
        }
        viewBox="0 0 40 40"
        width="1em"
      >
        <g>
          <path
            d="m35.9 16.4v4.3q0 0.9-0.6 1.5t-1.5 0.7h-9.3v9.2q0 0.9-0.6 1.6t-1.5 0.6h-4.3q-0.9 0-1.5-0.6t-0.7-1.6v-9.2h-9.3q-0.9 0-1.5-0.7t-0.6-1.5v-4.3q0-0.9 0.6-1.5t1.5-0.6h9.3v-9.3q0-0.9 0.7-1.5t1.5-0.6h4.3q0.9 0 1.5 0.6t0.6 1.5v9.3h9.3q0.9 0 1.5 0.6t0.6 1.5z"
          />
        </g>
      </svg>
    </div>
  </div>
</div>
`;
